<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btncnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnContinuar" />

    <Button
        android:id="@+id/btnnueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevaPartida" />

    <Button
        android:id="@+id/btnslr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalir" />

</LinearLayout>