<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/silueta" />

    <Button
        android:id="@+id/personaje_btnX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:text="Button" />

    <Button
        android:id="@+id/personaje_btnCasco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="Button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/personaje_btnX"
        android:layout_alignLeft="@+id/personaje_btnX"
        android:text="@string/BotonX" />

    <Button
        android:id="@+id/personaje_btnCuerpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/personaje_btnCasco"
        android:text="Button" />

    <Button
        android:id="@+id/personaje_btnMagia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/personaje_btnCuerpo"
        android:layout_toRightOf="@+id/imageView1"
        android:text="Button" />

    <Button
        android:id="@+id/personaje_btnY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/imageView1"
        android:text="Button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personaje_btnCuerpo"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/BotonY" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/personaje_btnMagia"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/BotonMagia" />

</RelativeLayout>